Fixed font sizing and spacing for image card.

--- a/styles/new-container.less
+++ b/styles/new-container.less
@@ -366,11 +366,11 @@
             font-size: 11px;
             color: @gray-normal;
             border-right: 1px solid @color-divider;
-            padding: 1.1rem 0.7rem;
+            padding: 1.1rem 1rem;
             .icon {
               position: relative;
               font-size: 11px;
-              margin-right: 0.5rem;
+              margin-right: 0.3rem;
               color: @gray-normal;
             }
             .icon-download {
@@ -379,6 +379,7 @@
             .text {
               position: relative;
               top: -0.2rem;
+              margin-right: 0.3rem;
             }
           }
           .tags {
@@ -407,6 +408,12 @@
             padding: 0.4rem 0.5rem;
             font-size: 20px;
             .box-button();
+            .box-button {
+              .icon {
+                font-size: 1.5rem;
+                margin-left: 0.2rem;
+              }
+            }
           }
           .action {
             flex: 0 auto;
